# LSL-actiCHamp

./: .gitignore  Amplifier_LIB.h  BUILD.txt  CMakeLists.txt  LICENSE.txt  LibTalker.cpp  LibTalker.h  Packaging.cmake  README.md  actiCHamp_config.cfg  actiCHamp_config_xml.cfg  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.rc  mainwindow.ui  release_notes.txt
.github/workflows/: cppcmake.yml
actiCHamp/: actiCHamp.sln  actiCHamp.vcxproj  actiCHamp.vcxproj.filters  actiCHamp_config.cfg  icon.rc
actiCHampLib/: Amplifier_LIB.h
actiCHampLib/Win32/Release/: ActiChampX.bit  ActiChamp_x86.lib  actiCHampLib.lib
actiCHampLib/x64/Release/: ActiChamp_x64.lib  actiCHampLib.lib
build32/actiCHamp_autogen/include_Debug/EWIEGA46WW/: moc_mainwindow.cpp
